# testfixtures

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
examples/mysql/: Cargo.toml  README.md
examples/mysql/fixtures/: todos.yml
examples/mysql/src/: main.rs
initdb.d/: create_test_table.sql  initialize.sql  insert_test_data.sh
scripts/: initialize.sh
src/: database.rs  fixture_file.rs  helper.rs  lib.rs  loader.rs  mysql.rs
src/mysql/: helper.rs  loader.rs
src/postgres/: helper.rs  loader.rs
src/postgresql/: helper.rs  loader.rs  mod.rs
tests/: mysql.rs
tests/mysql/: test.rs
