[package]
name = "testfixtures"
version = "0.1.0"
authors = ["Takayuki Maeda <41065217+TaKO8Ki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", features = [ "mysql", "postgres" ] }
yaml-rust = "0.4"
anyhow = "1.0"
futures = "0.1"
async-trait = "0.1.31"
regex = "1"
chrono = "0.4.11"
