[package]
name = "testfixtures"
version = "0.1.0"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A library for preparing test data from yaml files in Rust"
repository = "https://github.com/TaKO8Ki/testfixtures"
readme = "README.md"
keywords = ["test", "testdata", "db", "sqlx"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3", features = [ "mysql", "postgres", "chrono" ] }
yaml-rust = "0.4"
anyhow = "1.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
futures = "0.1"
async-trait = "0.1.31"
regex = "1"
chrono = "0.4.11"
tempfile = "3"
