[workspace]
members = [
    ".",
    "examples/mysql/",
]

[package]
name = "testfixtures"
version = "0.1.1"
authors = ["Takayuki Maeda <takoyaki0316@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for preparing test data from yaml files in Rust"
repository = "https://github.com/TaKO8Ki/testfixtures"
documentation = "https://docs.rs/testfixtures"
readme = "README.md"
keywords = [ "test", "testdata", "db", "sqlx", "mysql" ]
categories = [ "database" ]

[dependencies]
sqlx = { version = "0.3", default-features = false, features = [ "mysql", "postgres", "chrono", "macros" ] }
yaml-rust = "0.4"
anyhow = "1.0"
futures = "0.1"
async-trait = "0.1.31"
regex = "1"
chrono = "0.4.11"

[dev-dependencies]
async-std = { version = "1.5.0", features = [ "attributes" ] }
tokio = { version = "0.2.21", features = [ "full" ] }
tempfile = "3"

[features]
default = [ "runtime-async-std" ]
runtime-tokio = [ "sqlx/runtime-tokio" ]
runtime-async-std = [ "sqlx/runtime-async-std" ]
mysql = []

[[test]]
name = "mysql"
path = "tests/mysql.rs"
required-features = [ "mysql" ]
