[package]
name = "mysql"
version = "0.1.0"
edition = "2018"
workspace = "../../"

[dependencies]
testfixtures = { path = "../../" }
sqlx = { version = "0.3", default-features = false, features = [ "mysql", "chrono", "macros" ] }
async-std = { version = "1.5.0", features = [ "attributes" ] }
paw = "1.0"
chrono = "0.4.11"
anyhow = "1.0"
